--- a/index.html
+++ b/index.html
@@ -108,18 +108,17 @@
 	About Matt Smith
 </h4>
 <p>
-I'm the senior lecturer in computing at
+I'm senior lecturer in computing at
 	<a href="http://www.itb.ie">
-		<b class="link2">Institute of Technology Blanchardstown</b>, Dublin 15
+		<b class="link2">TU Dublin</b>, Dublin 15, Republic of Ireland
 	</a>
 
 <br />
 You can contact me by email at
 	<strong>
-		matt.smith-AT-itb.ie
+		matt.smith-AT-tubublin.ie
 
 	</strong>
-or by phone on (01) 885 1098
 </p>
 
 
@@ -181,13 +180,6 @@ Curently I'm working on the integration of the following for some cool 3D intera
 	</a>
 
 	<br/>
-	<a href="http://zigfu.com/">
-	<b class="link2">
-		Zigfu
-	</b>
-	</a>
-
-	<br/>
 	<a href="http://www.blender.org/">
 	<b class="link2">
 		Blender
@@ -197,7 +189,7 @@ Curently I'm working on the integration of the following for some cool 3D intera
 	
 	<li>
 	large scale, robust PHP-database driven websites based around
-	the Symfony 2 framework
+	the Symfony 5 framework
 	</li>
 	
 
@@ -220,7 +212,7 @@ Curently I'm working on the integration of the following for some cool 3D intera
 </h4>
 
 <p>
-In May 2011 I took up Taekwon-Do (I'm hoping to get my black belt in 2015 ...). I run the  website for the
+In May 2011 I took up Taekwon-Do (got my black belt in 2015). I run the  website for the
 <a href="http://maynoothtkd.com/">
 <b class="link2">Maynooth Taekwon-Do School</b>
 </a>
